<resources>
    <string name="app_name">Ezymd</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notification</string>
    <string name="title_profile">Profile</string>
    <string name="camera_permisssion">Camera permission denied</string>
    <string name="call_permisssion">Call permission denied</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="facebook">facebook</string>
    <string name="all_reviews">All reviews</string>
    <string name="_5_star">5 star</string>
    <string name="apply">Apply</string>
    <string name="back">Back</string>
    <string name="clear_filters">Clear filters</string>
    <string name="filters">Filters</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="did_not_receive_otp">Didn\'t received OTP?</string>
    <string name="resend">Resend</string>
    <string name="continue_string">Continue</string>
    <string name="enter_four_digit_code">Enter your 4 digit code sent to</string>
    <string name="delivery_location">Delivery Location</string>
    <string name="trending_food">Trending Food</string>
    <string name="resurant_around_you">restaurant around you</string>
    <string name="pizza">Pizza</string>
    <string name="countryCode">+1</string>
    <string name="enter_your_phone_no">Enter your phone no.</string>
    <string name="google">Google</string>
    <string name="send_otp">Send OTP</string>
    <string name="continue_with">Continue with</string>
    <string name="or">Or</string>
    <string name="dummmy_price">$10</string>
    <string name="unable_to_login">Unable to login in your Google Account</string>
    <string name="app_name_small">ezymd</string>
    <string name="title_activity_details">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="image">Image</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_delivery_location">Select Delivery location</string>
    <string name="search_location">Search Location</string>
    <string name="change">Change</string>
    <string name="share">share</string>
    <string name="bookmark">bookmark</string>
    <string name="view_cart">View cart</string>
    <string name="percent_discount">% discount</string>
    <string name="use_coupon_code">Use coupan code</string>
    <string name="rating">Rating</string>
    <string name="_rating"> rating</string>
    <string name="free_delivery">Free delivery</string>
    <string name="minimum">Min</string>
    <string name="edit">Edit</string>
    <string name="my_wallet">My wallet</string>
    <string name="faq">FAQ’s</string>
    <string name="refer_earn"><![CDATA[Refer & earn]]></string>
    <string name="logout">Logout</string>
    <string name="title_search">Search</string>
    <string name="title_cart">Cart</string>
    <string name="title_order">My order</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="only_one_can_change_at_a_time">Only Mobile Number can change this time</string>
    <string name="full_name_can_not_be_empty">Enter your full name</string>
    <string name="mobile_no_can_not_be_empty">Enter your mobile number</string>
    <string name="email_can_not_be_empty">Enter your email</string>
    <string name="save">Save</string>
    <string name="items">Items</string>
    <string name="this_item_is_not_available">This item is out of stock</string>
    <string name="search_resturant">Search Restaurant</string>
    <string name="total">Total</string>
    <string name="delivery_type">Delivery Type</string>
    <string name="pick_up">Pick up</string>
    <string name="delivery">Delivery</string>
    <string name="pay">Pay</string>
    <string name="title_confirm_order">Confirm Order</string>
    <string name="now">Now</string>
    <string name="now_delivery_instructions">Now orders are meant to place orders where the courier delivers your orders ASAP.</string>
    <string name="schedule_delivery_instructions">Scheduled orders ae meant to place orders where the courier delivers your orders at the selected delivery slot</string>
    <string name="schedule">Schedule</string>
    <string name="choose_date_time"><![CDATA[Choose Time For Delivery]]></string>
    <string name="delivery_at">Deliver today at</string>
    <string name="pass_time">you can not schedule your delivery in past time</string>
    <string name="confirm_and_proceed"><![CDATA[Confirm location & proceed]]></string>
    <string name="enter_address_details">Enter Address Details</string>
    <string name="address">Address</string>
    <string name="your_location">Your Location</string>
    <string name="how_to_reach">How to reach (optional)</string>
    <string name="how_to_reach_hint">Landmark / Entry gate/ Street</string>
    <string name="tower_wing">Tower / Wing (if applicable)</string>
    <string name="tower">e.g. Tower D</string>
    <string name="floor">Floor *</string>
    <string name="floor_hint">e.g. 2nd Floor</string>
    <string name="office_home_no">H. No /Office Name /Office Number *</string>
    <string name="office_home_no_hint">e.g Plot 100</string>
    <string name="promo_code">Promo code</string>
    <string name="apply_coupan">Apply coupon</string>
    <string name="subtotal">Subtotal</string>
    <string name="add_delivery_instruction">Add Delivery Instruction</string>
    <string name="title_checkout">Checkout</string>
    <string name="add_shipping_details">Add Shipping Details</string>
    <string name="setup_payment_credentials">Setup payment credentials</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="default_notification_channel_id" translatable="false">Ezymd01</string>
    <string name="terms_and_conditions"><![CDATA[*Terms & Conditions]]></string>
    <string name="add">+ ADD</string>
</resources>