<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:behavior_hideable="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        app:contentPadding="@dimen/_5sdp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">


            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.01"
                android:text="@string/enter_address_details"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.01"
                android:text="@string/your_location"
                android:textColor="@color/color_b2bdd1"
                android:textSize="@dimen/_9sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/toLocationTxt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/location_edit_text_bg"
                android:ellipsize="end"
                android:enabled="false"
                android:gravity="start|center"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.01"
                android:text="@string/office_home_no"
                android:textColor="@color/color_b2bdd1"
                android:textSize="@dimen/_9sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/flatNo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/location_edit_text_bg"
                android:ellipsize="end"
                android:gravity="start|center"
                android:hint="@string/office_home_no_hint"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                app:textFont="medium" />


            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.01"
                android:text="@string/floor"
                android:textColor="@color/color_b2bdd1"
                android:textSize="@dimen/_9sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/floor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/location_edit_text_bg"
                android:ellipsize="end"
                android:gravity="start|center"
                android:hint="@string/floor_hint"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                app:textFont="medium" />


            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.01"
                android:text="@string/tower_wing"
                android:textColor="@color/color_b2bdd1"
                android:textSize="@dimen/_9sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/tower"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/location_edit_text_bg"
                android:ellipsize="end"
                android:gravity="start|center"
                android:hint="@string/tower"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                app:textFont="medium" />


            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.01"
                android:text="@string/how_to_reach"
                android:textColor="@color/color_b2bdd1"
                android:textSize="@dimen/_9sdp"
                android:textStyle="normal"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/howToReach"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@drawable/location_edit_text_bg"
                android:ellipsize="end"
                android:gravity="start|center"
                android:hint="@string/how_to_reach_hint"
                android:maxLines="1"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/color_002366"
                android:textSize="@dimen/_15sdp"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapButton
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:background="@drawable/ic_gray_btn_pressed"
                android:text="@string/confirm_and_proceed"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                app:buttonFont="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>