<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.ezymd.restaurantapp.customviews.SnapTextView
            android:id="@+id/couponCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:letterSpacing="0.01"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/color_002366"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            app:textFont="medium" />

        <com.ezymd.restaurantapp.customviews.SnapTextView
            android:id="@+id/shortDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:letterSpacing="0.01"
            android:maxLines="2"
            android:text="@string/pizza"
            android:textColor="@color/color_787a7f"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal"
            app:textFont="roman" />

        <com.ezymd.restaurantapp.customviews.SnapTextView
            android:id="@+id/tnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_4sdp"
            android:gravity="center_vertical"
            android:letterSpacing="0.01"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/color_b2bdd1"
            android:textSize="@dimen/_9sdp"
            android:textStyle="normal"
            app:textFont="medium" />


    </LinearLayout>

    <com.ezymd.restaurantapp.customviews.SnapButton
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_5sdp"
        android:background="@drawable/review_bg"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:padding="@dimen/_5sdp"
        android:text="@string/apply"
        android:textColor="@color/color_002366"
        android:textSize="@dimen/_11sdp"
        android:textStyle="normal"
        app:buttonFont="medium" />

</LinearLayout>

