<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_100sdp"
        android:padding="@dimen/_10sdp">

        <com.ezymd.restaurantapp.customviews.SnapTextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_60sdp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp"
            app:textFont="bold" />


        <LinearLayout
            android:id="@+id/phoneLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_10sdp">

            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countryCode"
                android:textColor="@color/gray_333"
                android:textSize="@dimen/_17sdp"
                app:textFont="book" />

            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="  | "
                android:textColor="@color/dividerColor"
                android:textSize="@dimen/_25sdp"
                app:textFont="medium" />

            <com.ezymd.restaurantapp.customviews.SnapEditText
                android:id="@+id/phoneNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/enter_your_phone_no"
                android:inputType="phone"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray_9e9e9e"
                android:textSize="@dimen/_20sdp"
                app:textFontEdit="book" />


        </LinearLayout>

        <com.ezymd.restaurantapp.customviews.SnapButton
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/phoneLay"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_17sdp"
            android:background="@color/input_fields_color"
            android:gravity="center"
            android:text="@string/send_otp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp"
            app:buttonFont="roman" />

        <LinearLayout
            android:id="@+id/orLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/next"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal" />

            <com.ezymd.restaurantapp.customviews.SnapTextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                app:textFont="bold" />


            <LinearLayout
                android:id="@+id/right"
                android:layout_width="0dp"
                android:layout_height="@dimen/_1sdp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:orientation="horizontal" />
        </LinearLayout>

        <com.ezymd.restaurantapp.customviews.SnapTextView
            android:id="@+id/continue_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orLay"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/continue_with"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:textFont="bold" />

        <com.ezymd.restaurantapp.customviews.SnapButton
            android:id="@+id/facebook"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/continue_with"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_toLeftOf="@+id/divider"
            android:background="@color/input_fields_color"
            android:gravity="center"
            android:text="@string/facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp"
            app:buttonFont="roman" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="0.1dp"
            android:layout_below="@+id/continue_with"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <com.ezymd.restaurantapp.customviews.SnapButton
            android:id="@+id/google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/continue_with"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_toRightOf="@+id/divider"
            android:background="@color/input_fields_color"
            android:gravity="center"
            android:text="@string/google"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_17sdp"
            app:buttonFont="roman" />
    </RelativeLayout>
</FrameLayout>